@@ -473,6 +473,7 @@ metricbeat.modules:
 #-------------------------------- uwsgi Module -------------------------------
 - module: uwsgi
   metricsets: ["status"]
+  enable: true
   period: 10s
   hosts: ["tcp://127.0.0.1:9191"]
 
