@@ -1,19 +1,20 @@
 == uwsgi module
 
-This is the uwsgi module. Uses http://uwsgi-docs.readthedocs.io/en/latest/StatsServer.html[StatsServer].
+This is the uwsgi module. By default collects the `stats` metricset, using
+http://uwsgi-docs.readthedocs.io/en/latest/StatsServer.html[StatsServer].
 
 [float]
 === Module-specific configuration notes
 
 The uWSGI module has these additional config options:
 
-*`hosts`*:: host URLs to get data from. by default `tcp://127.0.0.1:9191`.
+*`hosts`*:: host URLs to get data from (e.g: `tcp://127.0.0.1:9191`).
   Can obtain data from 3 types of schemes: tcp (tcp://ip:port), unix socket (unix:///tmp/uwsgi.sock)
   and http/https server (http://ip:port)
 
 [float]
 === Dashboard
 
-The nginx module comes with a predefined dashboard. For example:
+The uwsgi module comes with a predefined dashboard. For example:
 
 image::./images/uwsgi_dashboard.png[]
